--- a/spark-docker/Dockerfile
+++ b/spark-docker/Dockerfile
@@ -1,12 +1,7 @@
 # the base image is a trusted java build (https://registry.hub.docker.com/_/java/)
 # FROM java:8
 
-# MAINTAINER m.sioufy@anchormen.nl
-
 FROM ubuntu:14.04
-
-
-MAINTAINER m.sioufy@anchormen.nl
 
 
 ####installing [software-properties-common] so that we can use [apt-add-repository] to install Java8
@@ -23,17 +18,14 @@ RUN apt-get update -y \
 &&  apt-get install -y oracle-java8-installer \
     supervisor
 
-
-####downloading & unpacking Spark 2.2.1 [prebuilt for Hadoop 2.6+ and scala 2.10]
+####downloading & unpacking Spark 2.4.0
 RUN wget http://httpd-mirror.sergal.org/apache/spark/spark-2.4.0/spark-2.4.0-bin-hadoop2.7.tgz \
 &&  tar -xzf spark-2.4.0-bin-hadoop2.7.tgz \
 &&  mv spark-2.4.0-bin-hadoop2.7 /opt/spark
 
-
-#####adding conf files [to be used by supervisord for running spark master/slave]
+#####adding conf files
 COPY master.conf /opt/conf/master.conf
 COPY slave.conf /opt/conf/slave.conf
-
 
 #######exposing port 8080 for spark master UI
 EXPOSE 8080
