--- a/spark-docker/docker-compose.yml
+++ b/spark-docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   master:
     build: .
     image: anchormen/spark
+    name: master
     container_name: master
     ports:
       - "8080:8080"
@@ -24,6 +25,7 @@ services:
 #---------------------------------------
   slave:
     image: anchormen/spark
+    name: slave
     depends_on:
       - master
     command: ["/usr/bin/supervisord", "--configuration=/opt/conf/slave.conf"]
