--- a/cluster/web/Dockerfile
+++ b/cluster/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM node
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev libkrb5-dev
-RUN apt-get install -y supervisor
+
+RUN npm install pm2 -g
 
 WORKDIR /app
 COPY package.json /app
@@ -10,11 +10,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 COPY . /app
 
-RUN cd /app && ls
-
-# Adding conf files
-COPY app.conf /opt/conf/app.conf
-
 # Expose port 3000
 EXPOSE 3000
 
+CMD ["pm2-runtime", "index.js"]
