--- a/cluster/web/package.json
+++ b/cluster/web/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.3.13",
     "shelljs": "^0.8.3"
