--- a/cluster/docker-compose.yml
+++ b/cluster/docker-compose.yml
@@ -10,21 +10,17 @@ services:
       - "7077:7077" 
       - "8888:8888" 
       - "8081:8081"
+      - "6066:6066"
+    volumes:
+      - type: bind
+        source: ./spark/spark-tasks
+        target: /opt/spark/tasks
     command: ["/usr/bin/supervisord", "--configuration=/opt/conf/master.conf"]
   slave:
     build: ./spark
     depends_on:
       - master
     command: ["/usr/bin/supervisord", "--configuration=/opt/conf/slave.conf"]
-  driver:
-    build: ./spark-driver
-    container_name: driver
-    depends_on:
-      - master
-    volumes:
-      - type: bind
-        source: ./spark-driver/spark-tasks
-        target: /opt/spark/tasks
   db:
     build: ./mongo
     volumes:
