--- a/cluster/web/package.json
+++ b/cluster/web/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.3.13",
+    "request": "^2.88.0",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {},
